--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,8 +13,42 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+        
+      - name: Create Dockerfile
+        run: |
+          cat > Dockerfile << 'EOL'
+          # Build stage
+          FROM node:22-alpine AS build
+          WORKDIR /src
+          COPY package*.json ./
+          RUN npm install
+          COPY . .
+          ENV CI=false
+          ENV ESLINT_NO_DEV_ERRORS=true
+          RUN npm run build
+
+          # Production stage
+          FROM nginx:alpine
+          COPY --from=build /src/build /usr/share/nginx/html
+          EXPOSE 80
+          CMD ["nginx", "-g", "daemon off;"]
+          EOL
+          
+      - name: Create .ebextensions
+        run: |
+          mkdir -p .ebextensions
+          cat > .ebextensions/nginx-config.config << 'EOL'
+          container_commands:
+            01_reload_nginx:
+              command: "service nginx reload"
+          EOL
+  
       - name: Generate deployment packages
-        run: zip -r epockalv-deploy.zip . -x '*.git*'
+        run: zip -r epockalv-deploy.zip . -x "node_modules/*" ".git/*"
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
